перевел на русский

--- a/pages/main.html
+++ b/pages/main.html
@@ -28,19 +28,19 @@
             </content-main-1>
             <content-main-1-form>
                 <content-fragment>
-                    <h1>Laughter. Tears. Thrills. Find it all on Netflix.</h1>
+                    <h1>Смех. Слезы. Острые ощущения. Найдите все это на Netflix.</h1>
                 </content-fragment>
                 <content-fragment>
-                    <p>Endless entertainment starts at just EUR5.99. Cancel
-                        anytime.</p>
+                    <p>Стоимость бесконечных развлечений начинается всего с 5,99 евро. Отменить
+                        в любое время.</p>
                 </content-fragment>
                 <email-form>
                     <email-form-container>
                         <form action="">
-                            <h3 style="font-weight: 100;">Ready to watch? Enter your email to create or restart your membership.</h3>
+                            <h3 style="font-weight: 100; font-size: 16px;">Готовы смотреть? Введите свой адрес электронной почты, чтобы создать или перезапустить подписку.</h3>
                             <input-continer>
                                 <input class="form-input me-3" placeholder="Email" type="email" name="" id="">
-                                <button class="btn-signIn" type="submit">Get Started</button>
+                                <button class="btn-signIn" type="submit">Начать</button>
                             </input-continer>
                         </form>
                     </email-form-container>
