main-block-content-2

--- a/pages/main.html
+++ b/pages/main.html
@@ -23,23 +23,30 @@
                 </div>
 
             </header>
+
             <content-main-1>
                 <content-main-1-background> </content-main-1-background>
             </content-main-1>
             <content-main-1-form>
                 <content-fragment>
-                    <h1>Смех. Слезы. Острые ощущения. Найдите все это на Netflix.</h1>
+                    <h1>Смех. Слезы. Острые ощущения. Найдите все это на
+                        Netflix.</h1>
                 </content-fragment>
                 <content-fragment>
-                    <p>Стоимость бесконечных развлечений начинается всего с 5,99 евро. Отменить
+                    <p class="m-0">Стоимость бесконечных развлечений
+                        начинается всего с 5,99 евро. Отменить
                         в любое время.</p>
                 </content-fragment>
-                <email-form>
+                <email-form class="m-0">
                     <email-form-container>
-                        <form action="">
-                            <h3 style="font-weight: 100; font-size: 16px;">Готовы смотреть? Введите свой адрес электронной почты, чтобы создать или перезапустить подписку.</h3>
+                        <form action>
+                            <h3 style="font-weight: 100; font-size: 16px;">Готовы
+                                смотреть? Введите свой адрес электронной
+                                почты, чтобы создать или перезапустить
+                                подписку.</h3>
                             <input-continer>
-                                <input class="form-input me-3" placeholder="Email" type="email" name="" id="">
+                                <input class="form-input me-3"
+                                    placeholder="Email" type="email" name id>
                                 <button class="btn-signIn" type="submit">Начать</button>
                             </input-continer>
                         </form>
@@ -47,6 +54,29 @@
                 </email-form>
 
             </content-main-1-form>
+
+            <content-main-2>
+                <banner-container>
+                    <banner-element-1>
+                        <img src="/img/banner-icon.svg" alt="banner-icon">
+                    </banner-element-1>
+                    <banner-element-2>
+                        <p>Любимый вами Netflix всего за 5,99 евро.</p>
+                        <p>Получите тарифный план "Стандарт с рекламой".</p>
+                        <button class="btn-link">Подробнее
+                            <svg width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" xmlns="http://www.w3.org/2000/svg"
+                                data-mirrorinrtl="true"
+                                class="default-ltr-cache-4z3qvp e1svuwfo1"
+                                data-name="ChevronRight" aria-hidden="true"><path
+                                    fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M15.5859 12L8.29303 19.2928L9.70725 20.7071L17.7072 12.7071C17.8948 12.5195 18.0001 12.2652 18.0001 12C18.0001 11.7347 17.8948 11.4804 17.7072 11.2928L9.70724 3.29285L8.29303 4.70706L15.5859 12Z"
+                                    fill="currentColor"></path></svg>
+                        </button>
+                    </banner-element-2>
+                </banner-container>
+            </content-main-2>
+
         </main>
         <footer></footer>
     </body>
