first video block

--- a/pages/main.html
+++ b/pages/main.html
@@ -76,6 +76,29 @@
                     </banner-element-2>
                 </banner-container>
             </content-main-2>
+            <content-main-3>
+                <div class="row container">
+                    <div class="col" style="padding-top: 50px;">
+                        <h2 style="font-size: 48px;">Наслаждайтесь на своем
+                            телевизоре</h2>
+                        <p>Смотрите на телевизорах Smart TV, Playstation, Xbox,
+                            Chromecast, Apple TV, Blu-ray плеерах и многом
+                            другом.</p>
+
+                    </div>
+                    <div class="col" style="padding-left: 6px;">
+                        <div style="position: relative;">
+                            <img src="/img/tv.png" alt>
+                            <div class="video-container">
+                                <video autoplay playsinline muted loop>
+                                    <source src="/video/tv-main.m4v"
+                                        type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </content-main-3>
 
         </main>
         <footer></footer>
