content blocks complete

--- a/pages/main.html
+++ b/pages/main.html
@@ -100,6 +100,81 @@
                 </div>
             </content-main-3>
 
+            <content-main-4>
+                <div class="row container">
+                    <div class="col">
+                        <div style="position: relative;">
+                            <img src="/img/device-pile.png" alt="imac">
+                            <div class="video-container-imac">
+                                <video autoplay playsinline muted loop>
+                                    <source src="/video/video-devices.m4v"
+                                        type="video/mp4">
+                                </video>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <h2 style="font-size: 48px;">Смотрите везде</h2>
+                        <p>Смотрите потоки неограниченных
+                            фильмов и телепередач на своем телефоне, планшете,
+                            ноутбуке и телевизоре.</p>
+                    </div>
+                </div>
+            </content-main-4>
+
+            <content-main-5>
+                <div class="row container">
+
+                    <div class="col">
+                        <h2 style="font-size: 48px;">Создавайте профили для
+                            детей</h2>
+                        <p>Отправляйте детей в приключения с их любимыми
+                            персонажами в пространстве, созданном специально для
+                            них — бесплатно с вашим членством.</p>
+                    </div>
+
+                    <div class="col">
+                        <div style="position: relative;">
+                            <img src="/img/kids.png" alt="kids">
+
+                        </div>
+                    </div>
+                </div>
+            </content-main-5>
+
+            <content-main-6>
+                <div class="row container">
+
+                    <div class="col">
+                        <div style="position: relative;">
+                            <img src="/img/mobile-0819.jpg" alt="mobile">
+
+                            <div class="mobile-container-1">
+                                <div class="mobile-col-1">
+                                    <img alt="poster" src="/img/boxshot.png" class="mobile-image">
+                                </div>
+                                <div class="mobile-col-2">
+                                    <div class="mobile-col-2-row-1">Очень странные дела
+                                    </div>
+                                    <div
+                                        class="mobile-col-2-row-2">Загрузка...
+                                    </div>
+                                </div>
+
+                                <div class="mobile-col-3"></div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <h2 style="font-size: 48px;">Загружайте свои шоу для
+                            просмотра в автономном режиме</h2>
+                        <p>Доступно только в тарифных планах без рекламы.</p>
+                    </div>
+
+                </div>
+            </content-main-6>
+
         </main>
         <footer></footer>
     </body>
