--- a/pages/main.html
+++ b/pages/main.html
@@ -151,10 +151,12 @@
 
                             <div class="mobile-container-1">
                                 <div class="mobile-col-1">
-                                    <img alt="poster" src="/img/boxshot.png" class="mobile-image">
+                                    <img alt="poster" src="/img/boxshot.png"
+                                        class="mobile-image">
                                 </div>
                                 <div class="mobile-col-2">
-                                    <div class="mobile-col-2-row-1">Очень странные дела
+                                    <div class="mobile-col-2-row-1">Очень
+                                        странные дела
                                     </div>
                                     <div
                                         class="mobile-col-2-row-2">Загрузка...
@@ -176,6 +178,210 @@
             </content-main-6>
 
         </main>
-        <footer></footer>
+        <footer>
+            <div class="container pt-5 netflix-light">
+                <ul data-layout="container"
+                    class="footer-list"><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/support/412"><ya-tr-span
+                                data-index="12-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="FAQ"
+                                data-translation="Вопросы и ответы" data-ch="0"
+                                data-type="trSpan">FAQ</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com"><ya-tr-span
+                                data-index="13-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Help Center"
+                                data-translation="Справочный центр" data-ch="0"
+                                data-type="trSpan">Help Center</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k" href="/youraccount"><ya-tr-span
+                                data-index="14-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Account"
+                                data-translation="Учетная запись" data-ch="0"
+                                data-type="trSpan">Account</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://media.netflix.com/"><ya-tr-span
+                                data-index="15-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Media Center"
+                                data-translation="Медиацентр" data-ch="0"
+                                data-type="trSpan">Media Center</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="http://ir.netflix.com/"><ya-tr-span
+                                data-index="16-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Investor Relations"
+                                data-translation="Отношения с инвесторами"
+                                data-ch="0" data-type="trSpan">Investor
+                                Relations</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://jobs.netflix.com/jobs"><ya-tr-span
+                                data-index="17-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Jobs" data-translation="Вакансии"
+                                data-ch="0" data-type="trSpan">Jobs</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://netflix.shop/"><ya-tr-span
+                                data-index="18-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Netflix Shop"
+                                data-translation="Магазин Netflix" data-ch="0"
+                                data-type="trSpan">Netflix Shop</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k" href="/redeem"><ya-tr-span
+                                data-index="19-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Redeem Gift Cards"
+                                data-translation="Используйте подарочные карты"
+                                data-ch="0" data-type="trSpan">Redeem Gift Cards</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k" href="/gift-cards"><ya-tr-span
+                                data-index="20-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Buy Gift Cards"
+                                data-translation="Покупайте подарочные карты"
+                                data-ch="0" data-type="trSpan">Buy Gift Cards</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k" href="/watch"><ya-tr-span
+                                data-index="21-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Ways to Watch"
+                                data-translation="Способы просмотра" data-ch="0"
+                                data-type="trSpan">Ways to Watch</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/legal/termsofuse"><ya-tr-span
+                                data-index="22-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Terms of Use"
+                                data-translation="Условия использования"
+                                data-ch="0" data-type="trSpan">Terms of Use</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/legal/privacy"><ya-tr-span
+                                data-index="23-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Privacy"
+                                data-translation="Конфиденциальность"
+                                data-ch="0" data-type="trSpan"
+                                data-selected="false">Privacy</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k" href="#"><ya-tr-span
+                                data-index="24-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Cookie Preferences"
+                                data-translation="Настройки файлов cookie"
+                                data-ch="0" data-type="trSpan">Cookie
+                                Preferences</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/legal/corpinfo"><ya-tr-span
+                                data-index="25-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Corporate Information"
+                                data-translation="Корпоративная информация"
+                                data-ch="0" data-type="trSpan">Corporate
+                                Information</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/contactus"><ya-tr-span
+                                data-index="26-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Contact Us"
+                                data-translation="Связаться с нами" data-ch="0"
+                                data-type="trSpan">Contact Us</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://fast.com"><ya-tr-span
+                                data-index="27-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Speed Test"
+                                data-translation="Тест на скорость" data-ch="0"
+                                data-type="trSpan">Speed Test</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://netflix.com/legal/guarantee"><ya-tr-span
+                                data-index="28-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Legal Guarantee"
+                                data-translation="Юридическая гарантия"
+                                data-ch="0" data-type="trSpan"
+                                data-selected="false">Legal Guarantee</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://help.netflix.com/legal/notices"><ya-tr-span
+                                data-index="29-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Legal Notices"
+                                data-translation="Юридические уведомления"
+                                data-ch="0" data-type="trSpan">Legal Notices</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link"
+                            class="default-ltr-cache-aw529k"
+                            href="https://www.netflix.com/fr-en/browse/genre/839338"><ya-tr-span
+                                data-index="30-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Only on Netflix"
+                                data-translation="Только на Netflix" data-ch="0"
+                                data-type="trSpan">Only on Netflix</ya-tr-span></a></li><li
+                        data-layout="item"
+                        class="default-ltr-cache-1kw8vet ew2l6qe0"><a
+                            role="link" data-uia="footer-link-ad-choices"
+                            class="default-ltr-cache-aw529k"
+                            href="https://netflix.com/adchoices"><ya-tr-span
+                                data-index="31-0" data-translated="false"
+                                data-source-lang="en" data-target-lang="ru"
+                                data-value="Ad Choices"
+                                data-translation="Настройки рекламы" data-ch="0"
+                                data-type="trSpan">Ad Choices</ya-tr-span></a></li></ul>
+            </div>
+        </footer>
     </body>
 </html>
