--- a/pages/register.html
+++ b/pages/register.html
@@ -9,7 +9,7 @@
         
     <body>
         <main>
-            <header>
+            <header-reg>
                 <div class="header-content">
                     <div class="row">
                         <div class="col justify-content-start">
@@ -21,9 +21,9 @@
                         </div>
                     </div>
                 </div>
-            </header>
+            </header-reg>
 
-            <content-main-1-form>
+            <content-main-1-form-reg style="flex-grow: 0;">
                 <form method="POST">
                     <content-fragment>
                         <span class="step-indicator">
@@ -65,7 +65,7 @@
                             Далее
                         </button>  
                 </content-fragment>
-            </content-main-1-form>
+            </content-main-1-form-reg>
         </main>
     </body>
 </html>
