add finish acc page

--- a/pages/register_if_account_alredy_created.html
+++ b/pages/register_if_account_alredy_created.html
@@ -23,7 +23,7 @@
                 </div>
             </header-reg>
 
-            <content-main-1-form-reg style="flex-grow: 0;">
+            <content-main-1-form-reg>
                 <form method="POST">
                     <content-fragment>
                         <span class="step-indicator">
@@ -59,12 +59,12 @@
                     <content-fragment>
                         <a class="link-forgot-password" href="#">Забыли пароль?</a>
                     </content-fragment>
-                </form>
-                <content-fragment class="submit-register-container">
+                    <div class="submit-register-container">
                         <button class="submit-register-button">
                             Далее
                         </button>  
-                </content-fragment>
+                    </div>
+                </form>
             </content-main-1-form-reg>
         </main>
     </body>
