finish create password

--- a/pages/register_create_password.html
+++ b/pages/register_create_password.html
@@ -57,16 +57,19 @@
                                 </input-continer>
                             </li>
                             <li>
-                                <input-continer>
+                                <input-continer class="mt-2"> 
                                     <input class="form-input"
                                         placeholder="Введите пароль" type="password" name id>
                                 </input-continer>
                             </li>
                         </ul>
                     </content-fragment>
-                    <content-fragment>
-                        <a class="link-forgot-password" href="#">Забыли пароль?</a>
-                    </content-fragment>
+                    <div class="email-preference-container">
+                        <input type="checkbox" placeholder="" id="e83093c53429a"
+                            name="emailPreference">
+                        <label for="e83093c53429a" class="email-preference-lable">Присылать специальные предложения от Netflix</label>
+                    </div>
+
                     <div class="submit-register-container">
                         <button class="submit-register-button">
                             Далее
