--- a/pages/register_finish_acc.html
+++ b/pages/register_finish_acc.html
@@ -23,33 +23,31 @@
                 </div>
             </header-reg>
 
-            <content-main-1-form-reg>
-                <form method="POST" class="reg-form">
-                    <div class="step-logo-container">
-                        <span class="step-logo"></span>
+            <content-main-1-form-reg class="reg-form">
+                <div class="step-logo-container">
+                    <span class="step-logo"></span>
+                </div>
+                <content-fragment>
+                    <span class="step-indicator">
+                        ШАГ
+                        <b>1</b>
+                        ИЗ
+                        <b>3</b>
+                    </span>
+                    <h1>
+                        Завершите настройку своего аккаунта
+                    </h1>
+                </content-fragment>
+                <content-fragment>
+                    <div class="context-body">
+                        Netflix создан специально для вас. Создайте пароль, чтобы начать просмотр Netflix.
                     </div>
-                    <content-fragment>
-                        <span class="step-indicator">
-                            ШАГ
-                            <b>1</b>
-                            ИЗ
-                            <b>3</b>
-                        </span>
-                        <h1>
-                            Завершите настройку своего аккаунта
-                        </h1>
-                    </content-fragment>
-                    <content-fragment>
-                        <div class="context-body">
-                            Netflix создан специально для вас. Создайте пароль, чтобы начать просмотр Netflix.
-                        </div>
-                    </content-fragment>
-                    <div class="submit-register-container">
-                        <button class="submit-register-button">
-                            Далее
-                        </button>  
-                    </div>
-                </form>
+                </content-fragment>
+                <div class="submit-register-container">
+                    <button class="submit-register-button">
+                        Далее
+                    </button>  
+                </div>
             </content-main-1-form-reg>
             <div class="footer-wrapper">
                 <div class="footer-divider"></div>
