--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Netflix</title>
     <link rel="stylesheet" href="/assets/register.css">
+    <!-- <link rel="stylesheet" href="/index.css"> -->
 </head>
 
 <body>
@@ -13,6 +14,9 @@
     </div>
     <script src="/handlebars/dist/handlebars.runtime.js"></script>
     <script src="./components/RegFooter/RegFooter.precompiled.js"></script>
+    <script src="./components/SignInLink/SignInLink.precompiled.js"></script>
+    <script src="./components/NetflixLogo/NetflixLogo.precompiled.js"></script>
+    <script src="./components/Header/Header.precompiled.js"></script>
 
     <script type="module" src="./index.js"></script>
 </body>
