make finish acc page on modules

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script src="./components/SignInLink/SignInLink.precompiled.js"></script>
     <script src="./components/NetflixLogo/NetflixLogo.precompiled.js"></script>
     <script src="./components/Header/Header.precompiled.js"></script>
+    <script src="./components/SubmitRegisterButton/SubmitRegisterButton.precompiled.js"></script>
+    <script src="./components/RegisterStepHeader/RegisterStepHeader.precompiled.js"></script>
+    <script src="./components/RegisterContextBody/RegisterContextBody.precompiled.js"></script>
+    <script src="./components/FinishAccContent/FinishAccContent.precompiled.js"></script>
 
     <script type="module" src="./index.js"></script>
 </body>
