--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Netflix</title>
-    <link rel="stylesheet" href="/assets/register.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Netflix</title>
+        <link rel="stylesheet" href="./src/static/assets/register.css">
+    </head>
 
-<body>
-    <div id="root">
+    <body>
+        <div id="root"></div>
+        
+        <script src="/handlebars/dist/handlebars.runtime.js"></script>
 
-    </div>
-    <script src="/handlebars/dist/handlebars.runtime.js"></script>
-    <script src="./components/RegFooter/RegFooter.precompiled.js"></script>
+        <script src="/src/pages/login/components/body/body.precompiled.js"></script>
+        <script src="/src/pages/login/components/header/header.precompiled.js"></script>
+        <script src="/src/pages/login/components/footer/footer.precompiled.js"></script>
 
-    <script type="module" src="./index.js"></script>
-</body>
+        <script src="/src/pages/feed/components/header/header-feed.precompiled.js"></script>
+        <script type="module" src="./index.js"></script>
+    </body>
 
 </html>
